[package]
name = "lightshow"
version = "0.1.0"
authors = ["Matthew Billman <mgbvox@gmail.com>"]
edition = "2021"


[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
embedded-hal = "1.0.0"
microbit-v2 = { version = "0.15.1", features = ["embedded-hal-02"] }
panic-halt = "0.2.0"
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
